add jwt in endpoints
