# api/controllers/auth.js
@@ -1,15 +1,0 @@
-const jwt = require('jsonwebtoken')
-
-const verifyToken = (req, res, next) => {
-    const token = req.header('auth-token')
-    if (!token) return res.status(401).json({ error: 'Acceso denegado a la API de Marketplace' })
-    try {
-        const verified = jwt.verify(token, process.env.TOKEN_SECRET)
-        req.user = verified
-        next()
-    } catch (error) {
-        res.status(400).json({ error: 'Este token no es válido' })
-    }
-}
-
-module.exports = verifyToken;
